sdk-docs_versioned_docs/version-19.0.0/enums/Generated/Types/StakingTx/StakingTx.md
---
id: "StakingTx"
title: "Enumeration: StakingTx"
sidebar_label: "StakingTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).StakingTx

## Enumeration Members

### AddPermissionedValidator

• **AddPermissionedValidator** = ``"staking.addPermissionedValidator"``

#### Defined in

[generated/types.ts:451](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L451)

___

### Bond

• **Bond** = ``"staking.bond"``

#### Defined in

[generated/types.ts:439](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L439)

___

### BondExtra

• **BondExtra** = ``"staking.bondExtra"``

#### Defined in

[generated/types.ts:440](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L440)

___

### CancelDeferredSlash

• **CancelDeferredSlash** = ``"staking.cancelDeferredSlash"``

#### Defined in

[generated/types.ts:461](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L461)

___

### ChangeSlashingAllowedFor

• **ChangeSlashingAllowedFor** = ``"staking.changeSlashingAllowedFor"``

#### Defined in

[generated/types.ts:469](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L469)

___

### Chill

• **Chill** = ``"staking.chill"``

#### Defined in

[generated/types.ts:445](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L445)

___

### ChillFromGovernance

• **ChillFromGovernance** = ``"staking.chillFromGovernance"``

#### Defined in

[generated/types.ts:471](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L471)

___

### ForceNewEra

• **ForceNewEra** = ``"staking.forceNewEra"``

#### Defined in

[generated/types.ts:457](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L457)

___

### ForceNewEraAlways

• **ForceNewEraAlways** = ``"staking.forceNewEraAlways"``

#### Defined in

[generated/types.ts:460](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L460)

___

### ForceNoEras

• **ForceNoEras** = ``"staking.forceNoEras"``

#### Defined in

[generated/types.ts:456](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L456)

___

### ForceUnstake

• **ForceUnstake** = ``"staking.forceUnstake"``

#### Defined in

[generated/types.ts:459](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L459)

___

### IncreaseValidatorCount

• **IncreaseValidatorCount** = ``"staking.increaseValidatorCount"``

#### Defined in

[generated/types.ts:449](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L449)

___

### Nominate

• **Nominate** = ``"staking.nominate"``

#### Defined in

[generated/types.ts:444](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L444)

___

### PayoutStakers

• **PayoutStakers** = ``"staking.payoutStakers"``

#### Defined in

[generated/types.ts:462](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L462)

___

### PayoutStakersBySystem

• **PayoutStakersBySystem** = ``"staking.payoutStakersBySystem"``

#### Defined in

[generated/types.ts:468](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L468)

___

### ReapStash

• **ReapStash** = ``"staking.reapStash"``

#### Defined in

[generated/types.ts:465](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L465)

___

### Rebond

• **Rebond** = ``"staking.rebond"``

#### Defined in

[generated/types.ts:463](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L463)

___

### RemovePermissionedValidator

• **RemovePermissionedValidator** = ``"staking.removePermissionedValidator"``

#### Defined in

[generated/types.ts:452](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L452)

___

### ScaleValidatorCount

• **ScaleValidatorCount** = ``"staking.scaleValidatorCount"``

#### Defined in

[generated/types.ts:450](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L450)

___

### SetCommissionCap

• **SetCommissionCap** = ``"staking.setCommissionCap"``

#### Defined in

[generated/types.ts:454](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L454)

___

### SetController

• **SetController** = ``"staking.setController"``

#### Defined in

[generated/types.ts:447](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L447)

___

### SetHistoryDepth

• **SetHistoryDepth** = ``"staking.setHistoryDepth"``

#### Defined in

[generated/types.ts:464](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L464)

___

### SetInvulnerables

• **SetInvulnerables** = ``"staking.setInvulnerables"``

#### Defined in

[generated/types.ts:458](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L458)

___

### SetMinBondThreshold

• **SetMinBondThreshold** = ``"staking.setMinBondThreshold"``

#### Defined in

[generated/types.ts:455](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L455)

___

### SetPayee

• **SetPayee** = ``"staking.setPayee"``

#### Defined in

[generated/types.ts:446](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L446)

___

### SetValidatorCount

• **SetValidatorCount** = ``"staking.setValidatorCount"``

#### Defined in

[generated/types.ts:448](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L448)

___

### SubmitElectionSolution

• **SubmitElectionSolution** = ``"staking.submitElectionSolution"``

#### Defined in

[generated/types.ts:466](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L466)

___

### SubmitElectionSolutionUnsigned

• **SubmitElectionSolutionUnsigned** = ``"staking.submitElectionSolutionUnsigned"``

#### Defined in

[generated/types.ts:467](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L467)

___

### Unbond

• **Unbond** = ``"staking.unbond"``

#### Defined in

[generated/types.ts:441](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L441)

___

### UpdatePermissionedValidatorIntendedCount

• **UpdatePermissionedValidatorIntendedCount** = ``"staking.updatePermissionedValidatorIntendedCount"``

#### Defined in

[generated/types.ts:470](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L470)

___

### Validate

• **Validate** = ``"staking.validate"``

#### Defined in

[generated/types.ts:443](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L443)

___

### ValidateCddExpiryNominators

• **ValidateCddExpiryNominators** = ``"staking.validateCddExpiryNominators"``

#### Defined in

[generated/types.ts:453](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L453)

___

### WithdrawUnbonded

• **WithdrawUnbonded** = ``"staking.withdrawUnbonded"``

#### Defined in

[generated/types.ts:442](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L442)
