sdk-docs_versioned_docs/version-26.1.x/enums/Generated/Types/StakingTx/StakingTx.md
---
id: "StakingTx"
title: "Enumeration: StakingTx"
sidebar_label: "StakingTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).StakingTx

## Enumeration Members

### AddPermissionedValidator

• **AddPermissionedValidator** = ``"staking.addPermissionedValidator"``

#### Defined in

[generated/types.ts:473](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L473)

___

### Bond

• **Bond** = ``"staking.bond"``

#### Defined in

[generated/types.ts:461](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L461)

___

### BondExtra

• **BondExtra** = ``"staking.bondExtra"``

#### Defined in

[generated/types.ts:462](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L462)

___

### CancelDeferredSlash

• **CancelDeferredSlash** = ``"staking.cancelDeferredSlash"``

#### Defined in

[generated/types.ts:483](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L483)

___

### ChangeSlashingAllowedFor

• **ChangeSlashingAllowedFor** = ``"staking.changeSlashingAllowedFor"``

#### Defined in

[generated/types.ts:491](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L491)

___

### Chill

• **Chill** = ``"staking.chill"``

#### Defined in

[generated/types.ts:467](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L467)

___

### ChillFromGovernance

• **ChillFromGovernance** = ``"staking.chillFromGovernance"``

#### Defined in

[generated/types.ts:493](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L493)

___

### ChillOther

• **ChillOther** = ``"staking.chillOther"``

#### Defined in

[generated/types.ts:496](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L496)

___

### ForceApplyMinCommission

• **ForceApplyMinCommission** = ``"staking.forceApplyMinCommission"``

#### Defined in

[generated/types.ts:497](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L497)

___

### ForceNewEra

• **ForceNewEra** = ``"staking.forceNewEra"``

#### Defined in

[generated/types.ts:479](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L479)

___

### ForceNewEraAlways

• **ForceNewEraAlways** = ``"staking.forceNewEraAlways"``

#### Defined in

[generated/types.ts:482](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L482)

___

### ForceNoEras

• **ForceNoEras** = ``"staking.forceNoEras"``

#### Defined in

[generated/types.ts:478](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L478)

___

### ForceUnstake

• **ForceUnstake** = ``"staking.forceUnstake"``

#### Defined in

[generated/types.ts:481](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L481)

___

### IncreaseValidatorCount

• **IncreaseValidatorCount** = ``"staking.increaseValidatorCount"``

#### Defined in

[generated/types.ts:471](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L471)

___

### Kick

• **Kick** = ``"staking.kick"``

#### Defined in

[generated/types.ts:494](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L494)

___

### Nominate

• **Nominate** = ``"staking.nominate"``

#### Defined in

[generated/types.ts:466](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L466)

___

### PayoutStakers

• **PayoutStakers** = ``"staking.payoutStakers"``

#### Defined in

[generated/types.ts:484](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L484)

___

### PayoutStakersBySystem

• **PayoutStakersBySystem** = ``"staking.payoutStakersBySystem"``

#### Defined in

[generated/types.ts:490](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L490)

___

### ReapStash

• **ReapStash** = ``"staking.reapStash"``

#### Defined in

[generated/types.ts:487](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L487)

___

### Rebond

• **Rebond** = ``"staking.rebond"``

#### Defined in

[generated/types.ts:485](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L485)

___

### RemovePermissionedValidator

• **RemovePermissionedValidator** = ``"staking.removePermissionedValidator"``

#### Defined in

[generated/types.ts:474](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L474)

___

### ScaleValidatorCount

• **ScaleValidatorCount** = ``"staking.scaleValidatorCount"``

#### Defined in

[generated/types.ts:472](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L472)

___

### SetCommissionCap

• **SetCommissionCap** = ``"staking.setCommissionCap"``

#### Defined in

[generated/types.ts:476](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L476)

___

### SetController

• **SetController** = ``"staking.setController"``

#### Defined in

[generated/types.ts:469](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L469)

___

### SetHistoryDepth

• **SetHistoryDepth** = ``"staking.setHistoryDepth"``

#### Defined in

[generated/types.ts:486](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L486)

___

### SetInvulnerables

• **SetInvulnerables** = ``"staking.setInvulnerables"``

#### Defined in

[generated/types.ts:480](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L480)

___

### SetMinBondThreshold

• **SetMinBondThreshold** = ``"staking.setMinBondThreshold"``

#### Defined in

[generated/types.ts:477](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L477)

___

### SetMinCommission

• **SetMinCommission** = ``"staking.setMinCommission"``

#### Defined in

[generated/types.ts:498](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L498)

___

### SetPayee

• **SetPayee** = ``"staking.setPayee"``

#### Defined in

[generated/types.ts:468](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L468)

___

### SetStakingConfigs

• **SetStakingConfigs** = ``"staking.setStakingConfigs"``

#### Defined in

[generated/types.ts:495](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L495)

___

### SetValidatorCount

• **SetValidatorCount** = ``"staking.setValidatorCount"``

#### Defined in

[generated/types.ts:470](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L470)

___

### SubmitElectionSolution

• **SubmitElectionSolution** = ``"staking.submitElectionSolution"``

#### Defined in

[generated/types.ts:488](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L488)

___

### SubmitElectionSolutionUnsigned

• **SubmitElectionSolutionUnsigned** = ``"staking.submitElectionSolutionUnsigned"``

#### Defined in

[generated/types.ts:489](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L489)

___

### Unbond

• **Unbond** = ``"staking.unbond"``

#### Defined in

[generated/types.ts:463](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L463)

___

### UpdatePermissionedValidatorIntendedCount

• **UpdatePermissionedValidatorIntendedCount** = ``"staking.updatePermissionedValidatorIntendedCount"``

#### Defined in

[generated/types.ts:492](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L492)

___

### Validate

• **Validate** = ``"staking.validate"``

#### Defined in

[generated/types.ts:465](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L465)

___

### ValidateCddExpiryNominators

• **ValidateCddExpiryNominators** = ``"staking.validateCddExpiryNominators"``

#### Defined in

[generated/types.ts:475](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L475)

___

### WithdrawUnbonded

• **WithdrawUnbonded** = ``"staking.withdrawUnbonded"``

#### Defined in

[generated/types.ts:464](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L464)
